# ratatui-minecraft

./: Cargo.toml  README.md  flake.nix
examples/: minimal.rs  todo.rs
src/: backend.rs  color.rs  game_manager.rs  init_clients.rs  input.rs  lib.rs  setup.rs
src/input/: key.rs  modifier.rs
