[package]
name = "ratatui-minecraft"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.14.2", default-features = false }
bevy_ecs = { version = "0.14.2", default-features = false, features = [
    "multi_threaded",
] }

color-eyre = "0.6.5"
itertools = "0.14.0"
ratatui = {version = "0.29.0", default-features = false }
serde = {version = "1.0.219", optional = true}
tap = "1.0.1"
valence-screens.git = "https://github.com/TadoTheMiner/valence-screens"
valence.git = "https://github.com/valence-rs/valence"
catppuccin = "2.5.1"
bevy-trait-query = "0.6.0"
bitflags = "2.9.1"

[features]
serde = ["dep:serde"]
